# bids-mriqc

./: .dockerignore  .gitignore  .gitlab  .gitlab-ci.yml  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  FAQ.md  LICENSE  README.md  manifest.json  pyproject.toml  requirements-dev.txt  requirements.txt  run  run.py  single_layer_nonfunc_Dockerfile  test_client.py
.github/: release-drafter.yml
docs/: changelog.md  release_notes.md
fw_gear_bids_app_template/: main.py  parser.py
fw_gear_bids_app_template/utils/: dry_run.py  helpers.py
fw_gear_bids_mriqc/: __init__.py  autoupdate.py  main.py  parser.py
fw_gear_bids_mriqc/utils/: __init__.py  dry_run.py  helpers.py  store_iqms.py
tests/: conftest.py  platform_test.py  test_helpers.py  test_main.py  test_parser.py  test_run.py  test_store_iqms.py  test_utils.py
tests/integration_tests/: test_dry_run.py  test_run.py  test_wet_run.py
tests/unit_tests/: test_download_run_level.py  test_generate_command.py  test_group_level.py  test_run_level.py  test_set_performance_config.py  test_store_iqms.py  test_validate.py
utils/: args.py  dry_run.py  singularity.py
utils/bids/: download_bids.py  download_run_level.py  tree.py  tree_bids.py  validate.py
utils/dicom/: import_dicom_header_as_dict.py
utils/fly/: dev_helpers.py  get_root_client.py  get_session_from_analysis_id.py  get_session_uids.py  make_session_directory.py  set_session_label.py
utils/helpers/: exists.py  extract_return_paths.py  set_environment.py
utils/results/: store_bids_tree.py  store_iqms.py  zip_all_htmls.py  zip_htmls.py  zip_intermediate.py  zip_output.py
