[tool.poetry]
name = "fw-gear-bids-mriqc"
version = "2.1.2"
description = "Flywheel BIDS MRIQC"
authors = ["Flywheel <support@flywheel.io>"]
readme = "README.md"
license = "MIT"
keywords = [
    "Flywheel",
    "Gears"
]
repository = "https://gitlab.com/flywheel-io/scientific-solutions/gears/bids-apps/bids-mriqc"
classifiers = [

    "Topic :: Scientific/Engineering"
]
packages = [
    {include="fw_gear_bids_mriqc", from="."}
]

[tool.poetry.dependencies]
python = "^3.9"
flywheel-gear-toolkit = "^0.6"
flywheel-bids = "^1.2.25"
jsonschema="^4.0"

[tool.poetry.dev-dependencies]
psutil = "^5.9.0"
pytest = "^7.0"
pytest-cov = "^4.0"
pytest-mock = "^3.11"
jupyter = "^1.0.0"
packaging = ">=24"
ordered-set = ">=3.1.1"
more_itertools = ">=8.8"
importlib_resources = ">=5.10.2"
importlib_metadata = ">=6"
tomli = ">=2.0.1"
wheel = ">=0.43.0"
platformdirs = ">= 2.6.2"

[tool.ruff]
lint.ignore-init-module-imports = true
lint.ignore = ["D", "E722", "F401", "F841", "PLR0915"]
# Allow fix for all enabled rules (when `--fix`) is provided.
lint.fixable = ["ALL"]
lint.unfixable = []
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "docs",
    "setup.py"
]
# Same as Black
line-length = 120
# Allow unused variables when underscore-prefixed.
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
target-version = "py39"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.core.masonry.api"
